--- a/less/about.less
+++ b/less/about.less
@@ -16,12 +16,16 @@
 }
 .row{
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+   flex-wrap: wrap;
+   justify-content: center;
+}
+
+// .row > div[class*='col-'] {
+//   display: flex;
 
   
   
-}
+// }
 .column {
    margin: 30px;
     width: 33.3%;
